--- a/src/subtractionpage.form
+++ b/src/subtractionpage.form
@@ -228,6 +228,11 @@
         <Component class="javax.swing.JTextField" name="subbonusuans">
         </Component>
         <Component class="javax.swing.JLabel" name="subfeedback">
+          <Properties>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
+          </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="subenter">
           <Properties>
